更新语义模块搜索